--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Indastre - Industry Factory and Construction  HTML5 Template</title>
+	<title>STAY POWER AUTO AND TRADING ENETERPRISE</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
+	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/logo (2).png">
 	<!-- bootstrap CSS -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all">
 	<!-- carousel CSS -->
