--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 	<!--==================================================-->
 
 	<!-- indastre Mobile Menu Area -->
-	<div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none  " style="  background: url(../images/logo\ \(2\).png);">
+	<div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none  " ">
 		
 		<div class="mobile-menu">
 			<nav class="indastre_menu">
